[package]
name = "weather_db_maint"
version = "0.1.0"
edition = "2024"

[dependencies]
plotters = "0.3.7"
sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql", "macros", "tls-native-tls" ] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
inquire = { version = "0.9.3", features = ["date"] }
colorize = "0.1.0"